--- a/css/slideBusinessCard.css
+++ b/css/slideBusinessCard.css
@@ -5,11 +5,55 @@ body {
 }
 .a {
   position: relative;
+  top: 120px;
   width: 700px;
   height: 400px;
   border: #fff 10px solid;
   background-color: #788cc8;
-  top: 120px;
   border-radius: 20px;
   overflow: hidden;
+}
+.a .b {
+  position: absolute;
+  left: 0;
+  width: 200px;
+  height: 300px;
+  margin: 75px 50px;
+  transition: 1s;
+}
+.a .b a {
+  text-decoration: none;
+  color: #fff;
+  font: 900 28px '';
+}
+.a .b h2 {
+  transition: 0.5s 1s;
+  opacity: 0;
+  color: #1ed2c8;
+}
+.a .b span {
+  position: absolute;
+  top: 70px;
+  transition: 0.5s 1s;
+  color: #fff;
+  font: 500 15px '';
+}
+.c {
+  position: absolute;
+  top: -130px;
+  right: -240px;
+}
+.c .d,
+.c .e {
+  position: absolute;
+  right: calc(var(--i)*100px);
+  width: calc(var(--w)*40px);
+  height: 500px;
+  overflow: hidden;
+  border-radius: 100px;
+  transform: rotateZ(200deg) translate(0, 0);
+  background: #f0dc96;
+}
+.c .d:nth-child(2) {
+  background: #f0bee6;
 }
