--- a/less/slideBusinessCard.less
+++ b/less/slideBusinessCard.less
@@ -8,11 +8,61 @@ body {
 
 .a{
     position: relative;
+    top: 120px;
     width: 700px;
     height: 400px;
     border: #fff 10px solid;
     background-color: rgb(120,140,200);
-    top: 120px;
     border-radius: 20px;
     overflow: hidden;
+
+    .b {
+      position: absolute;  
+      left: 0;
+      width: 200px;
+      height: 300px;
+      margin: 75px 50px;
+      transition: 1s;
+
+      a {
+        text-decoration: none;
+        color: #fff;
+        font: 900 28px '';
+      }
+
+      h2 {
+        transition: .5s 1s;
+        opacity: 0;
+        color: rgb(30,210,200);
+      }
+
+      span {
+        position: absolute;
+        top: 70px;
+        transition: .5s 1s;
+        color: #fff;
+        font: 500 15px '';
+      }
+    }
+}
+
+.c {
+    position: absolute;
+    top: -130px;
+    right: -240px;
+
+    .d, .e {
+        position: absolute;
+        right: calc(var(--i)*100px);
+        width:  calc(var(--w)*40px);
+        height: 500px;
+        overflow: hidden;
+        border-radius: 100px;
+        transform: rotateZ(200deg) translate(0,0);
+        background: rgb(240, 220, 150);
+    }
+
+    .d:nth-child(2) {
+        background: rgb(240,190,230);
+    }
 }
